// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal story controller GET /internal/stories Возвращает отфильтрованные и отсортированные сторис с правильным размером страницы 1`] = `
Object {
  "items": Array [
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "dirty": true,
      "geo": Array [
        3,
        4,
      ],
      "id": 3,
      "image": Object {
        "group-id": 1398410,
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-animated": false,
          "orig-format": "JPEG",
          "orig-size": Object {
            "x": 960,
            "y": 1280,
          },
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320x320": Object {
            "height": 320,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460x460": Object {
            "height": 460,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "pages": Array [],
      "published": true,
      "publishedAt": "2022-04-29T03:00:00.000Z",
      "revision": 0,
      "rotationProbability": 0.213,
      "tags": Array [],
      "textColor": "#fefefe",
      "title": "Заголовок истории 3",
      "updatedAt": "2022-03-10T08:30:00.000Z",
      "urlPart": "story-url-part-3",
      "uuid": "a71f664e-2db5-461b-9cdf-89d1bd3b7526",
      "version": "images",
      "xAndroidAppVersion": "1.0.43",
      "xAndroidAppVersionTo": "1.0.213",
      "xIosAppVersion": "1.0.43",
      "xIosAppVersionTo": "1.0.213",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "dirty": true,
      "geo": Array [
        2,
        3,
      ],
      "id": 2,
      "image": Object {
        "group-id": 1398410,
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-animated": false,
          "orig-format": "JPEG",
          "orig-size": Object {
            "x": 960,
            "y": 1280,
          },
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320x320": Object {
            "height": 320,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460x460": Object {
            "height": 460,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "pages": Array [],
      "published": true,
      "publishedAt": "2022-04-29T02:00:00.000Z",
      "revision": 0,
      "rotationProbability": 0.212,
      "tags": Array [],
      "textColor": "#fefefe",
      "title": "Заголовок истории 2",
      "updatedAt": "2022-03-10T08:30:00.000Z",
      "urlPart": "story-url-part-2",
      "uuid": "5565fce5-02b7-4999-aa73-d13c07060e69",
      "version": "images",
      "xAndroidAppVersion": "1.0.42",
      "xAndroidAppVersionTo": "1.0.212",
      "xIosAppVersion": "1.0.42",
      "xIosAppVersionTo": "1.0.212",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "dirty": true,
      "geo": Array [
        1,
        2,
      ],
      "id": 1,
      "image": Object {
        "group-id": 1398410,
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-animated": false,
          "orig-format": "JPEG",
          "orig-size": Object {
            "x": 960,
            "y": 1280,
          },
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320x320": Object {
            "height": 320,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460x460": Object {
            "height": 460,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "pages": Array [],
      "published": true,
      "publishedAt": "2022-04-29T01:00:00.000Z",
      "revision": 0,
      "rotationProbability": 0.211,
      "tags": Array [],
      "textColor": "#fefefe",
      "title": "Заголовок истории 1",
      "updatedAt": "2022-03-10T08:30:00.000Z",
      "urlPart": "story-url-part-1",
      "uuid": "f130c380-fc5b-40be-88b5-ad6a599200a7",
      "version": "images",
      "xAndroidAppVersion": "1.0.41",
      "xAndroidAppVersionTo": "1.0.211",
      "xIosAppVersion": "1.0.41",
      "xIosAppVersionTo": "1.0.211",
    },
  ],
  "total": 4,
}
`;

exports[`Internal story controller POST /internal/stories Создает и возвращает новый сторис 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [
    Object {
      "backgroundColor": "#fffaaa",
      "backgroundSolid": true,
      "body": "Текст слайда",
      "buttonColor": "#fffccc",
      "buttonText": "Текст кнопки",
      "buttonUrl": "https://example.com/",
      "createdAt": "2022-03-10T08:30:00.000Z",
      "duration": 10,
      "id": 1,
      "image": Object {
        "group-id": 1398410,
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-animated": false,
          "orig-format": "JPEG",
          "orig-size": Object {
            "x": 960,
            "y": 1280,
          },
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "optimize": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "ratio": "square",
      "slide": 1,
      "storyId": 1,
      "textColor": "#fffbbb",
      "theme": "white",
      "title": "Заголовок слайда",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
  ],
  "published": false,
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;

exports[`Internal story controller POST /internal/stories/:id/publish Публикует сторис по id 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 1098,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
        "width": 824,
      },
      "1200х1200": Object {
        "height": 1200,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
        "width": 900,
      },
      "1252x1252": Object {
        "height": 1252,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
        "width": 939,
      },
      "1428x1428": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
        "width": 960,
      },
      "1600x1600": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
        "width": 960,
      },
      "1920x1920": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
        "width": 960,
      },
      "320x320": Object {
        "height": 320,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
        "width": 240,
      },
      "338x338": Object {
        "height": 338,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
        "width": 253,
      },
      "439x439": Object {
        "height": 439,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
        "width": 329,
      },
      "460x460": Object {
        "height": 460,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
        "width": 345,
      },
      "571x571": Object {
        "height": 571,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
        "width": 428,
      },
      "650x650": Object {
        "height": 650,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
        "width": 488,
      },
      "845x845": Object {
        "height": 845,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
        "width": 634,
      },
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [],
  "published": true,
  "publishedAt": "2022-04-07T10:20:30.000Z",
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;

exports[`Internal story controller POST /internal/stories/:id/publish Публикует сторис по uuid 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 1098,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
        "width": 824,
      },
      "1200х1200": Object {
        "height": 1200,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
        "width": 900,
      },
      "1252x1252": Object {
        "height": 1252,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
        "width": 939,
      },
      "1428x1428": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
        "width": 960,
      },
      "1600x1600": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
        "width": 960,
      },
      "1920x1920": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
        "width": 960,
      },
      "320x320": Object {
        "height": 320,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
        "width": 240,
      },
      "338x338": Object {
        "height": 338,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
        "width": 253,
      },
      "439x439": Object {
        "height": 439,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
        "width": 329,
      },
      "460x460": Object {
        "height": 460,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
        "width": 345,
      },
      "571x571": Object {
        "height": 571,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
        "width": 428,
      },
      "650x650": Object {
        "height": 650,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
        "width": 488,
      },
      "845x845": Object {
        "height": 845,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
        "width": 634,
      },
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [],
  "published": true,
  "publishedAt": "2022-04-07T10:20:30.000Z",
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;

exports[`Internal story controller POST /internal/stories/:id/unpublish Снимает с публикации сторис по id 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 1098,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
        "width": 824,
      },
      "1200х1200": Object {
        "height": 1200,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
        "width": 900,
      },
      "1252x1252": Object {
        "height": 1252,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
        "width": 939,
      },
      "1428x1428": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
        "width": 960,
      },
      "1600x1600": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
        "width": 960,
      },
      "1920x1920": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
        "width": 960,
      },
      "320x320": Object {
        "height": 320,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
        "width": 240,
      },
      "338x338": Object {
        "height": 338,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
        "width": 253,
      },
      "439x439": Object {
        "height": 439,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
        "width": 329,
      },
      "460x460": Object {
        "height": 460,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
        "width": 345,
      },
      "571x571": Object {
        "height": 571,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
        "width": 428,
      },
      "650x650": Object {
        "height": 650,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
        "width": 488,
      },
      "845x845": Object {
        "height": 845,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
        "width": 634,
      },
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [],
  "published": false,
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;

exports[`Internal story controller POST /internal/stories/:id/unpublish Снимает с публикации сторис по uuid 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 1098,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
        "width": 824,
      },
      "1200х1200": Object {
        "height": 1200,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
        "width": 900,
      },
      "1252x1252": Object {
        "height": 1252,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
        "width": 939,
      },
      "1428x1428": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
        "width": 960,
      },
      "1600x1600": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
        "width": 960,
      },
      "1920x1920": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
        "width": 960,
      },
      "320x320": Object {
        "height": 320,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/320x320",
        "width": 240,
      },
      "338x338": Object {
        "height": 338,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
        "width": 253,
      },
      "439x439": Object {
        "height": 439,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
        "width": 329,
      },
      "460x460": Object {
        "height": 460,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/460x460",
        "width": 345,
      },
      "571x571": Object {
        "height": 571,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
        "width": 428,
      },
      "650x650": Object {
        "height": 650,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
        "width": 488,
      },
      "845x845": Object {
        "height": 845,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
        "width": 634,
      },
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [],
  "published": false,
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;

exports[`Internal story controller PUT /internal/stories/:id Обновляет сторис по id и возвращает его 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [],
  "published": false,
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "c0efa04e-2072-4aeb-bd90-064aaa9d5aa7",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;

exports[`Internal story controller PUT /internal/stories/:id Обновляет сторис по uuid и возвращает его 1`] = `
Object {
  "createdAt": "2022-03-10T08:30:00.000Z",
  "dirty": true,
  "geo": Array [
    1,
    2,
  ],
  "id": 1,
  "image": Object {
    "group-id": 1398410,
    "imagename": "4747.jpg_1654518939714",
    "meta": Object {
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-size": Object {
        "x": 960,
        "y": 1280,
      },
      "orig-size-bytes": 168385,
    },
    "sizes": Object {
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
        "width": 960,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
        "width": 960,
      },
    },
  },
  "pages": Array [],
  "published": false,
  "revision": 0,
  "rotationProbability": 0.212,
  "tags": Array [],
  "textColor": "#fefefe",
  "title": "Заголовок истории",
  "updatedAt": "2022-03-10T08:30:00.000Z",
  "urlPart": "story-url-part",
  "uuid": "c0efa04e-2072-4aeb-bd90-064aaa9d5aa7",
  "version": "images",
  "xAndroidAppVersion": "1.0.42",
  "xAndroidAppVersionTo": "1.0.212",
  "xIosAppVersion": "1.0.42",
  "xIosAppVersionTo": "1.0.212",
}
`;
